compiler/driver/tests/snapshots/codegen_snapshots__snap_abs_intrinsic.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare double @atan2_f64(double %0, double %1)
declare double @cos_f64(double %0)
declare double @sin_f64(double %0)
declare double @tan_f64(double %0)
declare i32 @llvm.abs.i32(i32, i1)
declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %unary.N = sub i32 0, 42
  %abs.N = call i32 @llvm.abs.i32(i32 %unary.N, i1 true)
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %abs.N)
  ret i32 0
}
define i32 @pow_i32(i32 %0, i32 %1) {
entry:
  %bin.N = icmp slt i32 %1, 0
  br i1 %bin.N, label %then.N, label %else.N
then.N:
  ret i32 0
else.N:
  br label %endif.N
endif.N:
  br label %while.cond.N
while.cond.N:
  %loop.phi.N = phi i32 [0, %endif.N], [%loop.in.N, %while.body.N]
  %loop.phi.N = phi i32 [1, %endif.N], [%loop.in.N, %while.body.N]
  %bin.N = icmp slt i32 %loop.phi.N, %1
  br i1 %bin.N, label %while.body.N, label %while.end.N
while.body.N:
  %bin.N = mul i32 %loop.phi.N, %0
  %bin.N = add i32 %loop.phi.N, 1
  %loop.in.N = add i32 0, %bin.N
  %loop.in.N = add i32 0, %bin.N
  br label %while.cond.N
while.end.N:
  %loop.exit.N = phi i32 [%loop.phi.N, %while.cond.N]
  %loop.exit.N = phi i32 [%loop.phi.N, %while.cond.N]
  ret i32 %loop.exit.N
}
define i32 @sqrt_i32(i32 %0) {
entry:
  %bin.N = icmp sle i32 %0, 0
  br i1 %bin.N, label %then.N, label %else.N
then.N:
  ret i32 0
else.N:
  br label %endif.N
endif.N:
  %ssa.N = add i32 0, %0
  %bin.N = add i32 %ssa.N, 1
  %bin.N = sdiv i32 %bin.N, 2
  %ssa.N = add i32 0, %bin.N
  br label %while.cond.N
while.cond.N:
  %loop.phi.N = phi i32 [%ssa.N, %endif.N], [%loop.in.N, %while.body.N]
  %loop.phi.N = phi i32 [%ssa.N, %endif.N], [%loop.in.N, %while.body.N]
  %bin.N = icmp slt i32 %loop.phi.N, %loop.phi.N
  br i1 %bin.N, label %while.body.N, label %while.end.N
while.body.N:
  %bin.N = sdiv i32 %0, %loop.phi.N
  %bin.N = add i32 %loop.phi.N, %bin.N
  %bin.N = sdiv i32 %bin.N, 2
  %loop.in.N = add i32 0, %loop.phi.N
  %loop.in.N = add i32 0, %bin.N
  br label %while.cond.N
while.end.N:
  %loop.exit.N = phi i32 [%loop.phi.N, %while.cond.N]
  %loop.exit.N = phi i32 [%loop.phi.N, %while.cond.N]
  ret i32 %loop.exit.N
}
