compiler/driver/tests/snapshots/codegen_snapshots__snap_array_length.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca [4 x i32]
  %gep.N = getelementptr inbounds [4 x i32], [4 x i32]* %alloca.N, i32 0, i32 0
  store i32 1, i32* %gep.N
  %gep.N = getelementptr inbounds [4 x i32], [4 x i32]* %alloca.N, i32 0, i32 1
  store i32 2, i32* %gep.N
  %gep.N = getelementptr inbounds [4 x i32], [4 x i32]* %alloca.N, i32 0, i32 2
  store i32 3, i32* %gep.N
  %gep.N = getelementptr inbounds [4 x i32], [4 x i32]* %alloca.N, i32 0, i32 3
  store i32 4, i32* %gep.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 4)
  ret i32 0
}
