compiler/driver/tests/snapshots/codegen_snapshots__snap_array_literal.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @bounds_assert_i32(i32)
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca [3 x i32]
  %gep.N = getelementptr inbounds [3 x i32], [3 x i32]* %alloca.N, i32 0, i32 0
  store i32 1, i32* %gep.N
  %gep.N = getelementptr inbounds [3 x i32], [3 x i32]* %alloca.N, i32 0, i32 1
  store i32 2, i32* %gep.N
  %gep.N = getelementptr inbounds [3 x i32], [3 x i32]* %alloca.N, i32 0, i32 2
  store i32 3, i32* %gep.N
  %bounds_cmp.N = icmp ult i32 0, 3
  %bounds_ok.N = zext i1 %bounds_cmp.N to i32
  call void @bounds_assert_i32(i32 %bounds_ok.N)
  %arr.base.N = getelementptr inbounds [3 x i32], [3 x i32]* %alloca.N, i32 0, i32 0
  %gep.N = getelementptr inbounds i32, i32* %arr.base.N, i32 0
  %load.N = load i32, i32* %gep.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %load.N)
  ret i32 0
}
